Here we go again

--- a/src/exec/Makefile
+++ b/src/exec/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: wcapt < wcapt@student.42lausanne.ch >      +#+  +:+       +#+         #
+#    By: william <william@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/03/18 11:49:11 by wcapt             #+#    #+#              #
-#    Updated: 2025/03/18 16:03:00 by wcapt            ###   ########.fr        #
+#    Updated: 2025/03/31 15:20:10 by william          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -23,7 +23,9 @@ LIBFT_DIR = libft
 LIBFT = $(LIBFT_DIR)/libft.a
 
 # Fichiers sources
-SRC = 	$(SRC_DIR)/main.c $(SRC_DIR)/path.c $(SRC_DIR)/copy_env.c $(SRC_DIR)/utils.c
+SRC = 	$(SRC_DIR)/main.c $(SRC_DIR)/path.c $(SRC_DIR)/copy_env.c \
+		$(SRC_DIR)/utils.c $(SRC_DIR)/identification.c $(SRC_DIR)/builtin1.c \
+		$(SRC_DIR)/builtin2.c 
 
 # Fichiers objets
 OBJ = $(SRC:.c=.o)
@@ -36,7 +38,15 @@ $(LIBFT):
 
 $(NAME): $(OBJ) $(LIBFT)
 	@$(CC) $(CFLAGS) $(OBJ) $(LIBFT) -o $(NAME)
-	@echo "\033[32m exec compiled successfully!\033[0m"
+	@echo "\033[32m  _______      ___    ___ _______   ________     \033[0m" 
+	@echo "\033[32m |\  ___ \    |\  \  /  /|\  ___ \ |\   ____\    \033[0m"
+	@echo "\033[32m \ \   __/|   \ \  \/  / | \   __/|\ \  \___|    \033[0m"
+	@echo "\033[32m  \ \  \_|/__  \ \    / / \ \  \_|/_\ \  \       \033[0m"
+	@echo "\033[32m   \ \  \_|\ \  /     \/   \ \  \_|\ \ \  \____  \033[0m"
+	@echo "\033[32m    \ \_______\/  /\   \    \ \_______\ \_______\\033[0m"
+	@echo "\033[32m     \|_______/__/ /\ __\    \|_______|\|_______|\033[0m"
+	@echo "\033[32m              |__|/ \|__|                        \033[0m"
+	@echo "\033[32m exec compiled successfully!\033[0m"                                                
 
 $(SRC_DIR)/%.o: $(SRC_DIR)/%.c
 	@$(CC) $(CFLAGS) -c $< -o $@
