--- a/src/exec/libft/Makefile
+++ b/src/exec/libft/Makefile
@@ -22,7 +22,7 @@ SRC =	ft_itoa.c ft_isalnum.c ft_isalpha.c ft_isascii.c ft_isdigit.c \
 		ft_putendl_fd.c ft_split.c ft_strchr.c ft_strrchr.c ft_calloc.c \
 		ft_memset.c ft_memchr.c ft_strjoin.c ft_strtrim.c ft_strlcpy.c \
 		ft_memcpy.c ft_memmove.c ft_memcmp.c ft_striteri.c ft_strncmp.c \
-		ft_strlcat.c ft_strmapi.c ft_substr.c ft_strnstr.c 
+		ft_strlcat.c ft_strmapi.c ft_substr.c ft_strnstr.c ft_strcmp.c
 
 # Fichiers source bonus
 SRCBONUS =	ft_lstnew.c ft_lstsize.c ft_lstadd_front.c ft_lstlast.c \
