--- a/src/exec/Makefile
+++ b/src/exec/Makefile
@@ -6,7 +6,7 @@
 #    By: william <william@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/03/18 11:49:11 by wcapt             #+#    #+#              #
-#    Updated: 2025/03/31 15:20:10 by william          ###   ########.fr        #
+#    Updated: 2025/04/01 11:19:57 by william          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -39,7 +39,7 @@ $(LIBFT):
 $(NAME): $(OBJ) $(LIBFT)
 	@$(CC) $(CFLAGS) $(OBJ) $(LIBFT) -o $(NAME)
 	@echo "\033[32m  _______      ___    ___ _______   ________     \033[0m" 
-	@echo "\033[32m |\  ___ \    |\  \  /  /|\  ___ \ |\   ____\    \033[0m"
+	@echo "\033[32m |\  ___ \    |\  \  /  /|\  ___ \ |\   ____\    \033[0m"git 
 	@echo "\033[32m \ \   __/|   \ \  \/  / | \   __/|\ \  \___|    \033[0m"
 	@echo "\033[32m  \ \  \_|/__  \ \    / / \ \  \_|/_\ \  \       \033[0m"
 	@echo "\033[32m   \ \  \_|\ \  /     \/   \ \  \_|\ \ \  \____  \033[0m"
