work in progress

--- a/src/exec/Makefile
+++ b/src/exec/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: william <william@student.42.fr>            +#+  +:+       +#+         #
+#    By: wcapt <williamcapt@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/03/18 11:49:11 by wcapt             #+#    #+#              #
-#    Updated: 2025/04/01 11:19:57 by william          ###   ########.fr        #
+#    Updated: 2025/04/10 00:01:55 by wcapt            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,7 @@ NAME = exec
 
 # Compilateur et flags
 CC = cc
-CFLAGS = -Wall -Wextra -Werror
+CFLAGS = -Wall -Wextra -Werror -g
 
 # Dossiers
 SRC_DIR	= src
@@ -25,7 +25,8 @@ LIBFT = $(LIBFT_DIR)/libft.a
 # Fichiers sources
 SRC = 	$(SRC_DIR)/main.c $(SRC_DIR)/path.c $(SRC_DIR)/copy_env.c \
 		$(SRC_DIR)/utils.c $(SRC_DIR)/identification.c $(SRC_DIR)/builtin1.c \
-		$(SRC_DIR)/builtin2.c 
+		$(SRC_DIR)/builtin2.c $(SRC_DIR)/free.c $(SRC_DIR)/len.c \
+		$(SRC_DIR)/manage_env.c $(SRC_DIR)/get.c
 
 # Fichiers objets
 OBJ = $(SRC:.c=.o)
@@ -39,7 +40,7 @@ $(LIBFT):
 $(NAME): $(OBJ) $(LIBFT)
 	@$(CC) $(CFLAGS) $(OBJ) $(LIBFT) -o $(NAME)
 	@echo "\033[32m  _______      ___    ___ _______   ________     \033[0m" 
-	@echo "\033[32m |\  ___ \    |\  \  /  /|\  ___ \ |\   ____\    \033[0m"git 
+	@echo "\033[32m |\  ___ \    |\  \  /  /|\  ___ \ |\   ____\    \033[0m"
 	@echo "\033[32m \ \   __/|   \ \  \/  / | \   __/|\ \  \___|    \033[0m"
 	@echo "\033[32m  \ \  \_|/__  \ \    / / \ \  \_|/_\ \  \       \033[0m"
 	@echo "\033[32m   \ \  \_|\ \  /     \/   \ \  \_|\ \ \  \____  \033[0m"
