--- a/src/exec/libft/Makefile
+++ b/src/exec/libft/Makefile
@@ -15,14 +15,15 @@ NAME = libft.a
 CC = gcc
 CFLAGS = -Wall -Wextra -Werror
 
-# Fichiers source principaux
+# Fichiers sour#include "includes/libft.h"ce principaux
 SRC =	ft_itoa.c ft_isalnum.c ft_isalpha.c ft_isascii.c ft_isdigit.c \
 		ft_isprint.c ft_tolower.c ft_toupper.c ft_atoi.c ft_strlen.c \
 		ft_strdup.c ft_bzero.c ft_putnbr_fd.c ft_putstr_fd.c ft_putchar_fd.c \
 		ft_putendl_fd.c ft_split.c ft_strchr.c ft_strrchr.c ft_calloc.c \
 		ft_memset.c ft_memchr.c ft_strjoin.c ft_strtrim.c ft_strlcpy.c \
 		ft_memcpy.c ft_memmove.c ft_memcmp.c ft_striteri.c ft_strncmp.c \
-		ft_strlcat.c ft_strmapi.c ft_substr.c ft_strnstr.c ft_strcmp.c
+		ft_strlcat.c ft_strmapi.c ft_substr.c ft_strnstr.c ft_strcmp.c \
+		ft_strcat.c ft_arraylen.c ft_sort_array.c
 
 # Fichiers source bonus
 SRCBONUS =	ft_lstnew.c ft_lstsize.c ft_lstadd_front.c ft_lstlast.c \
