update global makefile

--- a/src/lexer/Makefile
+++ b/src/lexer/Makefile
@@ -17,7 +17,7 @@ NAME = lexer
 LIBFT = ./libft/libft.a
 SRC_DIR = src/
 OBJ_DIR = obj/
-INC = -I/home/alfavre/Documents/42_github/Minishell42/include -Ilibft
+INC = -Ilibft
 LIB = -Llibft -lft
 CC = gcc
 FLAGS = -g -Wall -Wextra -Werror
