--- a/src/exec/Makefile
+++ b/src/exec/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: wcapt <williamcapt@student.42.fr>          +#+  +:+       +#+         #
+#    By: wcapt < wcapt@student.42lausanne.ch >      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/03/18 11:49:11 by wcapt             #+#    #+#              #
-#    Updated: 2025/05/12 19:35:19 by wcapt            ###   ########.fr        #
+#    Updated: 2025/05/26 13:48:20 by wcapt            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -26,7 +26,8 @@ LIBFT = $(LIBFT_DIR)/libft.a
 SRC = 	$(SRC_DIR)/exec.c $(SRC_DIR)/path.c $(SRC_DIR)/copy_env.c \
 		$(SRC_DIR)/utils.c $(SRC_DIR)/identification.c $(SRC_DIR)/builtin1.c \
 		$(SRC_DIR)/builtin2.c $(SRC_DIR)/free.c $(SRC_DIR)/len.c \
-		$(SRC_DIR)/new_var.c $(SRC_DIR)/unset.c $(SRC_DIR)/get.c
+		$(SRC_DIR)/new_var.c $(SRC_DIR)/unset.c $(SRC_DIR)/get.c \
+		$(SRC_DIR)/pipe.c
 
 # Fichiers objets
 OBJ = $(SRC:.c=.o)
