--- a/libft/Makefile
+++ b/libft/Makefile
@@ -24,7 +24,7 @@ SRC =	ft_itoa.c ft_isalnum.c ft_isalpha.c ft_isascii.c ft_isdigit.c \
 		ft_memcpy.c ft_memmove.c ft_memcmp.c ft_striteri.c ft_strncmp.c \
 		ft_strlcat.c ft_strmapi.c ft_substr.c ft_strnstr.c ft_strcmp.c \
 		ft_strcat.c ft_arraylen.c ft_sort_array.c ft_is_a_number.c \
-		ft_strncpy.c ft_strdup_from_index.c ft_search_char.c\
+		ft_strncpy.c ft_strdup_from_index.c ft_search_char.c ft_strndup.c \
 
 # Fichiers source bonus
 SRCBONUS =	ft_lstnew.c ft_lstsize.c ft_lstadd_front.c ft_lstlast.c \
